--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@xixixao/uploadstuff": "^0.0.5",
     "axios": "^1.7.2",
@@ -26,6 +27,7 @@
     "embla-carousel": "^8.1.3",
     "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
+    "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "openai": "^4.47.3",
